<resources>
    <string name="app_name">LukaKu</string>
    <string name="about">About</string>
    <string name="about_info">The Lukaku application is a service that is engaged in the health sector that involves artificial intelligence technology to detect wounds and provide advice on actions in the form of first aids methods and drug recommendations.</string>
    <string name="account_created_success_message">Account created successfully.</string>
    <string name="aid_available">First Aids %s.</string>
    <string name="app_settings">App Settings</string>
    <string name="article_bookmarked">Article successfully bookmarked.</string>
    <string name="article_error_message">Something is wrong.</string>
    <string name="article_removed_bookmark">Article removed from bookmarks.</string>
    <string name="articles">Articles</string>
    <string name="available">Available</string>
    <string name="back">Back</string>
    <string name="bookmark_message">Your bookmark list is empty because you don\'t add any article in the bookmark menu.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="clipboard">Copied number %s to clipboard.</string>
    <string name="clipboard_all">Copied all to clipboard.</string>
    <string name="close">Close</string>
    <string name="common">COMMON</string>
    <string name="application">APPLICATION</string>
    <string name="copy_all">Copy All First Aids</string>
    <string name="copy_item">Copy</string>
    <string name="counter">%s/500</string>
    <string name="crop_image">Crop Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="date">Date</string>
    <string name="deleted">"Deleted successfully."</string>
    <string name="desc_menu_1">Take a snapshot or photo with the camera,\nor upload an image from your phone gallery.</string>
    <string name="desc_menu_2">Access information quickly for first aid methods\nthat you can do in everyday life.</string>
    <string name="desc_menu_3">Get access to healing with ready-to-order drug recommendations.</string>
    <string name="desc_sign">Let\'s start with a quick product tour and we will\nhave you up and running in no time!</string>
    <string name="detail_photo_article">Detail Photo Article</string>
    <string name="detection_continue">Continue</string>
    <string name="detection_result">Detection Result</string>
    <string name="detection_result_photo">Photo Detection Results</string>
    <string name="dialog_feedback">Discard draft?</string>
    <string name="dialog_message_deleted">You cannot restore an item once it has been deleted.</string>
    <string name="dialog_message_sign_out">You need to sign in again after sign out.</string>
    <string name="dialog_process">Are you sure you want to end this process?</string>
    <string name="dialog_title_deleted">Are you sure?</string>
    <string name="dialog_title_sign_out">Are you sure?</string>
    <string name="drag_size">%s Recommended Drugs.</string>
    <string name="drug_description">Drug description</string>
    <string name="drugstore">Drugstore</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_us">email us</string>
    <string name="error_camera_availability">Back and front camera are unavailable.</string>
    <string name="error_camera_initialization">Camera initialization failed.</string>
    <string name="error_camera_permission">Not getting permissions.</string>
    <string name="error_camera_start">Failed to bring up the camera.</string>
    <string name="error_camera_take">Failed to take picture.</string>
    <string name="error_style_find">Can\'t find style. Error: %s</string>
    <string name="error_style_parsing">Style parsing failed.</string>
    <string name="failed_message">There is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="failed_status">Whoops!</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_error">Something is wrong, please try again.</string>
    <string name="feedback_hint">Please let us know, how can we improve ourselves?</string>
    <string name="feedback_success">Your Feedback was sent successfully.</string>
    <string name="first_aid_label">How to do first aid:</string>
    <string name="first_aids_error_message">No label result.</string>
    <string name="flash">flash</string>
    <string name="github_us">github us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="history_message">Your history list is empty because you don\'t save any detection results in the action menu.</string>
    <string name="image_of_headline">Image of Headline</string>
    <string name="image_profile">Image Profile</string>
    <string name="join_now">Join Now</string>
    <string name="lets_get_started">Let\'s Get Started!</string>
    <string name="line">%s \t|</string>
    <string name="linkedin_us">linkedin us</string>
    <string name="location_error_message">Please turn on location</string>
    <string name="maintenance_message">The %s is currently still under development, you can contribute by providing Feedback.</string>
    <string name="maintenance_status">Sorry!</string>
    <string name="medicine_error_message">No label result.</string>
    <string name="medicine_label">Recommended drugs found:</string>
    <string name="medicine_size">Medicine</string>
    <string name="messages">Messages</string>
    <string name="messages_status">No messages yet</string>
    <string name="message_text">Get or send a message and it\nshows up here.</string>
    <string name="more_action">More Action</string>
    <string name="name_display">Hi, %s</string>
    <string name="negative_btn_deleted">Keep</string>
    <string name="negative_btn_detection">No</string>
    <string name="negative_btn_feedback">Keep</string>
    <string name="next">NEXT</string>
    <string name="no_available">Not Available</string>
    <string name="no_bookmarked_article">No bookmarked article.</string>
    <string name="no_content_message">It looks like there are no content available at this time.</string>
    <string name="no_first_aid">No first aid result.</string>
    <string name="no_medicine">No drug result.</string>
    <string name="no_result_message">It looks like there are no results available at this time, please try again.</string>
    <string name="no_saved_result">No saved detection result.</string>
    <string name="notifications">Notifications</string>
    <string name="open_gallery">Open gallery</string>
    <string name="piece">Rp %s</string>
    <string name="please_wait">Please Wait…</string>
    <string name="point_to_take_image">Point to take image</string>
    <string name="positive_btn_deleted">Discard</string>
    <string name="positive_btn_detection">Yes</string>
    <string name="positive_btn_feedback">Discard</string>
    <string name="postfix_by"> by LukaKu</string>
    <string name="prefix_first">First: </string>
    <string name="prev">PREV</string>
    <string name="product">PRODUCT</string>
    <string name="realtime_location">Realtime Location</string>
    <string name="reshoot">Retake</string>
    <string name="retry">Retry</string>
    <string name="save">SAVE</string>
    <string name="save_article">Save Article</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="save_result">Save Result</string>
    <string name="saved">"Saved successfully."</string>
    <string name="search_articles">Search articles…</string>
    <string name="search_hint">Search articles…</string>
    <string name="selected_image">Selected Image</string>
    <string name="send">Send</string>
    <string name="separator_next"> Next: </string>
    <string name="settings">Settings</string>
    <string name="settings_menu">Settings</string>
    <string name="sign_in_failed_message">Please check your internet network</string>
    <string name="sign_in_welcome_message">Welcome, %s</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="skip">SKIP</string>
    <string name="start_detection">Start Detection</string>
    <string name="status">Complete the last step to see the result.</string>
    <string name="status_detection">Detection in progress…</string>
    <string name="status_detection_complete">Detection successfully.</string>
    <string name="status_detection_error">%s, please try again!</string>
    <string name="still_under_development">Still under development!</string>
    <string name="switch_camera">Switch camera</string>
    <string name="tab_first_aid">First Aids</string>
    <string name="tab_medicine">Medicine</string>
    <string name="take_photo">Take Photo</string>
    <string name="theme">THEME</string>
    <string name="title_delete">Delete Saved</string>
    <string name="title_detection">Detection</string>
    <string name="title_drugstore">Drugstore</string>
    <string name="title_email">Send email</string>
    <string name="title_gallery">Choose a Picture</string>
    <string name="title_home">Home</string>
    <string name="title_hospital">Hospital</string>
    <string name="title_menu_1">Start Detection</string>
    <string name="title_menu_2">First Aid</string>
    <string name="title_menu_3">Drug Recommendations</string>
    <string name="title_open">Open media</string>
    <string name="title_profile">Profile</string>
    <string name="title_save">Save</string>
    <string name="type_of_wound">Type of wound</string>
    <string name="updates">Updates</string>
    <string name="updates_status">No updates yet</string>
    <string name="updates_message">When you get updates, they\'ll\nshow up here.</string>
    <string name="view_more">View More</string>
    <string name="wound_desc">Let’s get to know your wound more!</string>
    <string name="wound_type">Wound Type</string>
    <string name="your_location">Your Location</string>
    <string name="zoom_status">Zoom: %sx</string>
    <string name="pick_language">Select Language</string>
</resources>