<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.capture.CaptureFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_take_image"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/take_photo"
        android:scaleType="fitXY"
        android:src="@drawable/ic_take_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_switch_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_circle"
        android:contentDescription="@string/switch_camera"
        app:layout_constraintBottom_toBottomOf="@+id/ib_take_image"
        app:layout_constraintEnd_toEndOf="@+id/view_finder"
        app:layout_constraintStart_toEndOf="@+id/ib_take_image"
        app:layout_constraintTop_toTopOf="@+id/ib_take_image"
        app:srcCompat="@drawable/ic_flip_camera" />

    <ImageButton
        android:id="@+id/ib_open_gallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button_circle"
        android:contentDescription="@string/open_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/ib_take_image"
        app:layout_constraintEnd_toStartOf="@+id/ib_take_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_take_image"
        app:srcCompat="@drawable/ic_photo_galery" />

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageButton
        android:id="@+id/ib_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flash"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_off" />

    <SeekBar
        android:id="@+id/seek_bar_zoom"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:progressTint="@color/black_pearl"
        android:rotation="-90"
        android:thumbTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ib_open_gallery"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textColor="@color/white_smoke"
        app:layout_constraintBottom_toTopOf="@+id/ib_take_image"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/guideline_begin"
        tools:text="Zoom: 1.05x" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/point_to_take_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_begin"
        app:layout_constraintTop_toTopOf="@+id/view_finder"
        app:srcCompat="@drawable/ic_detector_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/title_detection"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_close"
        app:layout_constraintEnd_toStartOf="@+id/ib_flash"
        app:layout_constraintStart_toEndOf="@+id/ib_close"
        app:layout_constraintTop_toTopOf="@+id/ib_close" />

</androidx.constraintlayout.widget.ConstraintLayout>